--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,7 @@ AllCops:
   NewCops: disable
 Style/Documentation:
   Enabled: false
+Style/WordArray:
+  Enabled: false
+Metrics/BlockLength:
+  Enabled: false
